# clinic_appointments

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  answers.txt  docker-compose.yaml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yaml
alembic/: env.py
alembic/versions/: 2764a02be985_first_migration.py  7c87fe3f9e6f_added_timezone_support_to_datetime_.py
docs/: bot_scenario.md  design_to_implementaion.md
htmlmypy/: index.html
htmlmypy/html/src/: main.py.html
htmlmypy/html/src/api/: __init__.py.html
htmlmypy/html/src/core/: __init__.py.html  auth.py.html  config.py.html
htmlmypy/html/src/db/: __init__.py.html  session.py.html
htmlmypy/html/src/models/: __init__.py.html  appoitment.py.html  base.py.html  doctor.py.html  users.py.html
htmlmypy/html/src/repositories/: __init__.py.html  appointment.py.html  doctor.py.html  users.py.html
htmlmypy/html/src/schemas/: __init__.py.html  appointment.py.html  auth.py.html  doctor.py.html  user.py.html
htmlmypy/html/src/services/: __init__.py.html  user.py.html  (+1 more)
k8s/: app-deployment.yaml  postgres-deployment.yaml
src/: main.py
src/api/endpoints/: appointments.py  auth.py  doctor.py  health.py
src/core/: auth.py  config.py
src/db/: session.py
src/models/: __init__.py  appoitment.py  doctor.py  users.py
src/repositories/: appointment.py  doctor.py  users.py
src/schemas/: appointment.py  auth.py  doctor.py  user.py
src/services/: appointment.py  user.py
src/tests/: conftest.py
src/tests/integration/: test_appointments.py
src/tests/unit/: test_appointment_service.py
(+11 files in other folders)
